k8s/add-header-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-header-deployment
spec:
  selector:
    matchLabels:
      app: add-header
  template:
    metadata:
      labels:
        app: add-header
    spec:
      containers:
      - name: add-header-server
        image: timowang1991/add-header-server
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
