k8s/add-header-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: add-header-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: add-header
  ports:
  - port: 3001
    targetPort: 3001
