k8s/node-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: node
  ports:
  - port: 3000
    targetPort: 3000
