k8s/ingress.service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:  # annotations are some higher-level config
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/auth-url: 'http://add-header-cluster-ip.default.svc.cluster.local:3001/'
    nginx.ingress.kubernetes.io/auth-response-headers: 'x-user-address,x-gamebag-address'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-cluster-ip
                port:
                  number: 3000
